compiler/typ/tests/fixtures/diagnostics/0907_gadt_witness_annotation_mismatch_05.ml.infer.expected
File "0907_gadt_witness_annotation_mismatch_05.ml", line 1:
Warning 24 [bad-module-name]: bad source file name: 0907_gadt_witness_annotation_mismatch_05 is not a valid module name.

File "0907_gadt_witness_annotation_mismatch_05.ml", line 5, characters 31-43:
5 | let _ : bool witness_epsilon = WInt_epsilon
                                   ^^^^^^^^^^^^
Error: The constructor WInt_epsilon has type int witness_epsilon
       but an expression was expected of type bool witness_epsilon
       Type int is not compatible with type bool
